fix huge layout shift in release titles & add support for video backgrounds

--- a/styles/index.css
+++ b/styles/index.css
@@ -52,7 +52,7 @@ html {
     @apply h-4 w-4 mr-2 shrink-0;
 }
 
-.kodama_btn--primary {
+.kodama_btn--prary {
 	@apply bg-violet-600 hover:bg-violet-700 focus:ring-violet-800;
 }
 
